--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,9 @@
         "michelf/php-smartypants": "dev-lib",
         "kartik-v/yii2-markdown": "dev-master",
         "yurkinx/yii2-image": "dev-master",
-        "dmstr/yii2-adminlte-asset": "2.*"
+        "dmstr/yii2-adminlte-asset": "2.*",
+        "vova07/yii2-imperavi-widget": "*",
+        "warrence/yii2-kartikgii": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
