--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "dmstr/yii2-adminlte-asset": "2.*",
         "vova07/yii2-imperavi-widget": "*",
         "warrence/yii2-kartikgii": "dev-master",
-        "c006/yii2-migration-utility": "dev-master"
+        "c006/yii2-migration-utility": "dev-master",
+        "raoul2000/yii2-bootswatch-asset": "*"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
